# devdoc

./: .gitignore  .mcp.json  .opencode.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  GLOBAL_USAGE.md  LICENSE  Makefile  README.md  package.json  tsconfig.json  vitest.config.js
devdocs/: claude-dev3000-integration.md  features.md  json-hero-integration-plan.md  markserv-to-devdoc-refactoring-plan.md  mlir-location-info-support.md  model-explorer-manual-editing-feature.md  model-explorer-toolbar-logic.md  testing-sandbox-lessons.md  typescript-architecture.md
devdocs/human-in-the-loop/: 00-overview.md  01-interactive-compiler-workflow.md  02-user-experience.md  03-architecture.md  04-implementation.md  05-api-reference.md  06-mcp-integration.md  README.md  STRUCTURE.md
devdocs/logs/: cpp-binary-investigation.md  markserv-to-devdoc-rename-completion.md
devdocs/parser/: README.md  custom-dialect-handlers.md  custom-dialect.md  highlightjs-mlir.md  mlir-dialect-components-report.md  mlir-version-handling-plan.md  mlir.md  onnx.md  pytorch.md  universal-mlir-parser-design.md
lib/: highlightjs-mlir.d.ts  mlir-to-graph.ts  onnx-to-graph.ts  server.ts  splash.ts  types.ts
lib/api/: index.ts
lib/icons/: icons.css
scripts/: build.js  build_adapter_from_source.sh  infer_onnx_shapes.py  parse_mlir.py  parse_mlir_cpp.py  parse_mlir_regex.py  parse_mlir_with_adapter.py  post-build.js  setup-python-deps.sh  upgrade_mlir_syntax.py
src/cli/: config.ts  (+2 more)
src/mlir/: BUILD.md  CMakeLists.txt  README.md  mlir_parser.cpp
tests/: README.md  sample-custom-dialect.mlir  setup.ts
(+69 files in other folders)
